🔧 build: add types to js files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "dist/@types",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
