--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build:dev": "node_modules/.bin/tsc -w",
     "start": "node ."
   },
+  "bin": {
+    "generate-stylelintrc": "dist/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DeeshanSharma/stylelintrc-generator.git"
@@ -41,5 +44,8 @@
     "figlet": "^1.5.0",
     "inquirer": "^8.1.1",
     "listr": "^0.14.3"
-  }
+  },
+  "files": [
+    "dist/"
+  ]
 }
