--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "import/extensions": ["off", "never"],
-    "no-console": "off"
+    "no-console": "off",
+    "no-param-reassign": "off",
+    "consistent-return": "off"
   }
 }
