--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelintrc-generator",
-  "version": "0.1.0",
+  "version": "1.0.0-rc.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
